新規作成モーダル作成

--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@auth/drizzle-adapter": "^1.10.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^5.0.0-beta.29",
     "postgres": "^3.4.7",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
