--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/drizzle-adapter": "^1.10.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^5.0.0-beta.29",
