マンダラート一覧機能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "brainwriting",
     "brainwritings",
     "mandala",
+    "mandalart",
+    "mandalarts",
     "osborn",
     "drizzle",
     "nextauth"
