--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
+    "@headlessui/react": "^2.2.9",
     "aws-amplify": "^6.15.7",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
