--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
+    "@aws-sdk/client-cognito-identity": "^3.936.0",
+    "@aws-sdk/client-lambda": "^3.934.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.936.0",
     "@headlessui/react": "^2.2.9",
-    "aws-amplify": "^6.15.7",
+    "aws-amplify": "^6.15.8",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^5.0.0-beta.29",
+    "ob-appsync-events-request": "^0.0.7",
     "openai": "^6.9.0",
     "postgres": "^3.4.7",
     "react": "19.1.0",
