--- a/lambda/osborn-ai-worker/package.json
+++ b/lambda/osborn-ai-worker/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "esbuild index.ts --bundle --platform=node --target=es2020 --format=cjs --outfile=index.js --external:pg-native",
     "typecheck": "tsc --noEmit",
-    "package": "npm run build && zip function.zip index.js",
+    "package": "npm run build && rm -f function.zip && zip function.zip index.js",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
