--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "drizzle-orm": "^0.44.5",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^15.5.9",
     "next-auth": "^5.0.0-beta.29",
     "ob-appsync-events-request": "^0.0.7",
     "openai": "^6.9.0",
